<!-- Modified from Udacity's Just Java app -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/question1" />

        <RadioButton
            android:id="@+id/question1_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/box1"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/question2" />

        <RadioButton
            android:id="@+id/question2_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/box2"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/question3" />

        <RadioButton
            android:id="@+id/question3_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/box3"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_height="87dp"
            android:text="@string/question4" />

        <RadioButton
            android:id="@+id/question4_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/box4"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/question5" />

        <RadioButton
            android:id="@+id/question5_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/box5"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_height="65dp"
            android:text="@string/question6" />

        <CheckBox
            android:id="@+id/question6_checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/box6"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/question6_checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/box7"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/question6_checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/box8"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/question6_checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/box9"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/test_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="Score Report"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitAnswer"
            android:text="@string/answer" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:onClick="resetQuiz"
            android:text="@string/reset" />

    </LinearLayout>
</ScrollView>